fix side space on mobile

--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body {
     .experience__content img {
       width: 400px;
       height: 275px;
-      padding: 20px; }
+      padding: 20px 0; }
     .experience__content p {
       width: 700px;
       padding: 20px;
