--- a/scss/experience.scss
+++ b/scss/experience.scss
@@ -22,7 +22,7 @@
         img {
             width: 400px;
             height: 275px;
-            padding: 20px;
+            padding: 20px 0;
         }
         
         p {
